--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,7 +90,7 @@ button {
 }
 
 section {
-  padding: 8rem 0;
+  padding: 5rem 0;
   position: relative;
 }
 
