--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -73,6 +73,7 @@
     font-size: 0.85rem;
     color: rgba(255, 255, 255, 0.45);
     line-height: 1.7;
+    padding-left: 1rem;
 }
 
 .socials {
